objects/AIA_Benefit_Design_Product__c.object
<CustomObject>
    <fields>
        <fullName>Deductible_Applies__c</fullName>
        <label>Deductible Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deductible_Rules_DEDE_INN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deductible Rules (DEDE) - INN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deductible_Rules_DEDE_OON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deductible Rules (DEDE) - OON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deductible_Rules_DEDE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deductible Rules (DEDE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Family Deductible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stacked</fullName>
                </value>
                <value>
                    <fullName>Unstacked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Category_Payment_CGPY_INN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Category Payment (CGPY) - INN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Category_Payment_CGPY_OON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Category Payment (CGPY) - OON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Category_Payment_CGPY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Category Payment (CGPY)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Procedure_Payment_DPPY_INN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Procedure Payment (DPPY) - INN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Procedure_Payment_DPPY_OON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Procedure Payment (DPPY) - OON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Procedure_Payment_DPPY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Procedure Payment (DPPY)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Product_Name__c</fullName>
        <label>Dental Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlueDental Plus (PPO or 90 fee schedule)</fullName>
                </value>
                <value>
                    <fullName>Voluntary BlueDental Plus (PPO fee schedule only)</fullName>
                </value>
                <value>
                    <fullName>BlueDental Basic</fullName>
                </value>
                <value>
                    <fullName>Preferred (PPO) Dental</fullName>
                </value>
                <value>
                    <fullName>Traditional Dental (coinsurance is same for IN and OON)</fullName>
                </value>
                <value>
                    <fullName>Voluntary Preferred Dental</fullName>
                </value>
                <value>
                    <fullName>Voluntary Traditional Dental</fullName>
                </value>
                <value>
                    <fullName>BlueDental Preferred (Medigap)</fullName>
                </value>
                <value>
                    <fullName>Voluntary BlueDental Preferred (Medigap)</fullName>
                </value>
                <value>
                    <fullName>BlueDental Traditional (Medigap)</fullName>
                </value>
                <value>
                    <fullName>Voluntary BlueDental Traditional (Medigap)</fullName>
                </value>
                <value>
                    <fullName>BlueDHMO</fullName>
                </value>
                <value>
                    <fullName>Dental HMO (Available ridered to BlueChoice medical products only)</fullName>
                </value>
                <value>
                    <fullName>Freestanding Dental HMO (DHMO)</fullName>
                </value>
                <value>
                    <fullName>Dental HMO Opt-Out (Available ridered to BlueChoice medical products only)</fullName>
                </value>
                <value>
                    <fullName>BlueDental Plus</fullName>
                </value>
                <value>
                    <fullName>Preferred Dental</fullName>
                </value>
                <value>
                    <fullName>Traditional Dental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Product_Options__c</fullName>
        <label>Dental Product Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan 1 (100/80/80/50 IN and 100/80/80/50 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50 IN and 80/60/60/35 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 3 (100/80/50/50 IN and 100/80/50/50 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 4 (100/80/50/50 IN and 80/60/35/35 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 5 (100/80/80/50 IN and 100/80/80/50 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 6 (100/80/80/50 IN and 80/60/60/35 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 7 (100/80/50/50 IN and 100/80/50/50 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 8 (100/80/50/50 IN and 80/60/35/35 OON) - $2,000 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (100/80/0/0 IN and 80/60/0/0 OON) - $1,000 max, $25 deductible and no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (80/50/50/50/50 IN and 60/35/35/35/35 OON)- $1,000 max, $25 deductible and $800 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (80/50/50/50 IN and 60/35/35/35 OON) - $1,500 max, $0 deductible and no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,000 max, $25 deductible and $800/$1,000/$1,200 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,500 max, $25 deductible and $800/$1,000/$1,200/$1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,000 max, $0 deductible and $800/$1,000 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50 IN and 80/60/60/35/35 OON) - $1,500 max, $0 deductible and $800 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 3 (100/80/50/50/50 IN and 80/60/35/35/35 OON) - $1,000 max, $25 deductible and $800/$1,000/$1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 3 (100/80/50/50/50 IN and 80/60/35/35/35 OON) - $1,500 max, $25 deductible and $800/$1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 3 (100/80/50/50/50 IN and 80/60/35/35/35 OON) - $1,000 max, $25 deductible and $1,000 ortho max</fullName>
                </value>
                <value>
                    <fullName>Plan 4 (100/90/90/60/50 IN and 80/80/80/50/35 OON) - $1,000 max, $25 deductible and $1,000 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 4 (100/90/90/60/50 IN and 80/80/80/50/35 OON) - $1,500 max, $25 deductible and $1,000/$1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 4 (100/90/90/60/50 IN and 80/80/80/50/35 OON) - $1,000 max, $0 deductible and $1,000 ortho max</fullName>
                </value>
                <value>
                    <fullName>Plan 5 (100/90/60/60/50 IN and 80/80/50/50/35 OON) - $1,500 max, $25 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (80/50/50/50/50) - $1,000 max, $25 deductible and $800 ortho max</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (80/50/50/50/50) - $1,000 max, $50 deductible and $1,000 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 1 (80/50/50/50/50) - $1,500 max, $50 deductible and $1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50) - $1,000 max, $25 deductible and $800/$1,000/$1,200/$1,500 ortho max</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50) - $1,500 max, $25 deductible and $800/$1,000/$1,200 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50) - $1,000 max, $50 deductible and $800/$1,000/$1,200/$1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50) - $1,500 max, $50 deductible and $800/$1,000/$1,200/$1,500 ortho max or no ortho</fullName>
                </value>
                <value>
                    <fullName>Plan 2 (100/80/80/50/50) - $1,500 max, $50 deductible and $1,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Variables_by_Product__c</fullName>
        <label>Dental Variables by Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deductible Applies to All Basic Services</fullName>
                </value>
                <value>
                    <fullName>Annual Maximum Applies to All Basic Services</fullName>
                </value>
                <value>
                    <fullName>Preventive &amp; Diagnostic Services</fullName>
                </value>
                <value>
                    <fullName>Basic Services</fullName>
                </value>
                <value>
                    <fullName>Deductible Applies to All Basic and Major Services</fullName>
                </value>
                <value>
                    <fullName>Annual Maximum Applies to All Basic and Major Services</fullName>
                </value>
                <value>
                    <fullName>Basic Services and Major Services - Surgical</fullName>
                </value>
                <value>
                    <fullName>Major Services - Restorative</fullName>
                </value>
                <value>
                    <fullName>Annual Deductible and Maximum</fullName>
                </value>
                <value>
                    <fullName>Major Services - Surgical</fullName>
                </value>
                <value>
                    <fullName>Orthodontic Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiabeticSuppCopayApply__c</fullName>
        <label>Diabetic Supplies Copay Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiabeticSuppDedApply__c</fullName>
        <label>Diabetic Supplies Ded Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiabeticSuppMandateApply__c</fullName>
        <label>Diabetic Supplies Mandate Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_Dental_Header_Drawloop__c</fullName>
        <defaultValue>"CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. are both independent licensees of the Blue Cross and Blue Shield Association."+BR()+"® Registered trademark of the Blue Cross and Blue Shield Association.® Registered trademark of CareFirst of Maryland, Inc."+BR()+BR()+""</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclaim Info In Dental Header Drawloop</label>
        <length>18000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_Medical_Header_Drawloop__c</fullName>
        <defaultValue>"Serving Maryland, the District of Columbia and portions of Virginia, CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. CareFirst of Maryland, Inc., Group Hospitalization and Medical Services, Inc., First Care, Inc., The Dental Network and CareFirst BlueChoice, Inc. are independent licensees of the Blue Cross and Blue Shield Association."+BR()+"® Registered trademark of the Blue Cross and Blue Shield Association. ®’ Registered trademark of CareFirst of Maryland, Inc"+BR()+BR()+" "</defaultValue>
        <description>This is the disclaim field which is used for Medical/Drug/Dental Outputs. This field should not be on layout</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the disclaim field which is used for Medical/Drug/Dental Outputs. This field should not be on layout</inlineHelpText>
        <label>Disclaim Info In Medical Header Drawloop</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_NonDHMO_Header_Drawloop__c</fullName>
        <defaultValue>"CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. are both independent licensees of the Blue Cross and Blue Shield Association."+BR()+"® Registered trademark of the Blue Cross and Blue Shield Association. ® Registered trademark of CareFirst of Maryland, Inc."+BR()+BR()+BR()+" "</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclaim Info In NonDHMO Header Drawloop</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaim_Info_In_Vision_Header_Drawloop__c</fullName>
        <defaultValue>"Serving Maryland, the District of Columbia and portions of Virginia, CareFirst BlueCross BlueShield is the shared business name of CareFirst of Maryland, Inc. and Group Hospitalization and Medical Services, Inc. * Davis Vision is an independent company that provides administrative services for vision care to CareFirst BlueCross BlueShield and CareFirst BlueChoice, Inc. members. Davis Vision is solely responsible for the services it provides. CareFirst of Maryland, Inc., Group Hospitalization and Medical Services, Inc., First Care, Inc., The Dental Network and CareFirst BlueChoice, Inc. are independent licensees of the Blue Cross and Blue Shield Association."+BR()+BR()+"® Registered trademark of the Blue Cross and Blue Shield Association. ®' Registered trademark of CareFirst of Maryland, Inc"</defaultValue>
        <description>This field hold the disclaim info of Vision output and this should not be on layout</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field hold the disclaim info of Vision output and this should not be on layout</inlineHelpText>
        <label>Disclaim Info In Vision Header Drawloop</label>
        <length>22000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next1__c</fullName>
        <formula>"SFAIA_Benefit_Design_Product__c:" &amp; Id &amp; ";SFAIA_Benefit_Design__c:" &amp; Benefit_Design__r.Id &amp; ";DDPId:a190n0000001uur;Deploy:a170n0000006Fm5"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drawloop Next1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next2__c</fullName>
        <formula>IF( One_Network__c = True,"SFAIA_Benefit_Design_Product__c:" &amp; Id &amp; ";SFAIA_Benefit_Design__c:" &amp; Benefit_Design__r.Id &amp; ";DDPId:a190n0000001wBH;Deploy:a170n0000006HSE","SFAIA_Benefit_Design_Product__c:" &amp; Id &amp; ";SFAIA_Benefit_Design__c:" &amp; Benefit_Design__r.Id &amp; ";DDPId:a190n0000001uur;Deploy:a170n0000006Fm5")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drawloop Next2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next__c</fullName>
        <formula>"SFAIA_Benefit_Design_Product__c:" &amp; Id &amp; ";SFAIA_Benefit_Design__c:" &amp; Benefit_Design__r.Id &amp; ";DDPId:a190n0000001uvh;Deploy:a170n0000006DTEAA2"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drawloop Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Product_Options__c</fullName>
        <label>Drug Product Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO No Drug</fullName>
                </value>
                <value>
                    <fullName>ASO Drug (create drug product)</fullName>
                </value>
                <value>
                    <fullName>Option 1: $0/$25/$45/50% w/ $75 max and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 2: $8/$15/$30 w/ $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 2: $0/$25/$45/50% w/ $75 max and $100 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 4: $10/$20/$35 w/ $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 4: $8/$15/$30 w/ $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 7: $10/$20/$35 w/ $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 8: $0/$25/$45/50% w/ $75 max and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 9: $0/$25/$45/50% w/ $75 max and $100 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 12: $10/$25/$45/50% w/ $75 max and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 15: $10/$25/$45/50% w/ $75 max and $100 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 18: $10/$25/$45/50% w/ $75 max and $200 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 21: $15/$35/$60/50% w/ $100 max and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 24: $15/$35/$60/50% w/ $100 max and $100 deductible</fullName>
                </value>
                <value>
                    <fullName>Option 27: $15/$35/$60/50% w/ $100 max and $200 deductible</fullName>
                </value>
                <value>
                    <fullName>$15/$35/$60/50% w/ $100 maximum and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>$0/$25/$45/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
                </value>
                <value>
                    <fullName>$10/$25/$45/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
                </value>
                <value>
                    <fullName>$15/$35/$60/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
                </value>
                <value>
                    <fullName>$8/$15/$35/50% w/ $75 maximum and combined Medical/Rx deductible</fullName>
                </value>
                <value>
                    <fullName>$0/$25/$45/50% w/ $75 maximum and combined Medical/Rx deductible ($0 select generics not subject to deductible)</fullName>
                </value>
                <value>
                    <fullName>$15/$35/$60/50% w/ $150 maximum and $500 deductible</fullName>
                </value>
                <value>
                    <fullName>$15/$35/$60/50% w/ $150 maximum and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>$15/$35/$60/50% w/ $150 maximum</fullName>
                </value>
                <value>
                    <fullName>$0/$50/$75/50% w/ $150 maximum and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>$10/$30/$60/50% w/ $150 maximum and $0 deductible</fullName>
                </value>
                <value>
                    <fullName>$15/$45/$70/50% w/ $150 maximum and $0 deductible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBCL__c</fullName>
        <defaultValue>"D001"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>EOB Prefix</inlineHelpText>
        <label>EBCL</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Change_Drawloop__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date of Change Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emergency_Contraception_Exclusion_Desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Emergency Contraception Exclusion Desc</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Emergency_Contraception_Exclusion__c</fullName>
        <label>Emergency Contraception Exclusion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Arrangement__c</fullName>
        <label>Employer Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer Sponsored</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <label>Enrollment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parallel Enrollment</fullName>
                </value>
                <value>
                    <fullName>Non-Parallel Enrollment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ErectileDysfunc_c__c</fullName>
        <label>Erectile Dysfunction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Erectile_Dysfunction_Limitation_Others__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Erectile Dysfunction Limitation/Others</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exchange_CDH_Fund_Type__c</fullName>
        <label>Exchange CDH Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>Compatible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_CDH_Type__c</fullName>
        <label>Exchange CDH Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Package_Option__c</fullName>
        <label>Exchange Package Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy 1</fullName>
                </value>
                <value>
                    <fullName>Dummy 2</fullName>
                </value>
                <value>
                    <fullName>Dummy 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Only include custom exclusions language on this field. Standard exclusions language will be shown in the benefit contract.</inlineHelpText>
        <label>Exclusions</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exclusive_Specialty_Network__c</fullName>
        <formula>Text(Benefit_Design__r.Benefit_Request_Form__r.Exclusive_Specialty_Provider_Network__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclusive Specialty Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclusive_Specialty_Provider_Network__c</fullName>
        <label>Exclusive Specialty Provider Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusive_Specialty_Provider_Network_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exclusive Specialty Provider Network</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtraCare_Health_Care_Card1__c</fullName>
        <description>Replacing existing formula field [ExtraCare_Health_Care_Card__c - Benefit_Design__r.Benefit_Request_Form__r.ExtraCare_Health_Care_Card__c] with this field as per the story B-03464</description>
        <label>ExtraCare Health Care Card</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtraCare_Health_Care_Card__c</fullName>
        <formula>Benefit_Design__r.Benefit_Request_Form__r.ExtraCare_Health_Care_Card__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExtraCare Health Care Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSA_BlueFund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSA BlueFund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fall_Prevention_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fall_Prevention_Mandate_Description__c</fullName>
        <defaultValue>"The USPSTF recommendation includes exercise or physical therapy to prevent falls. "</defaultValue>
        <description>The USPSTF recommendation includes exercise or physical therapy to prevent falls.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fall Prevention Mandate Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fall_Prevention__c</fullName>
        <label>Fall Prevention</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Deductible_CalculationPicklist__c</fullName>
        <label>Family Deductible Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate 2X</fullName>
                </value>
                <value>
                    <fullName>Aggregate 3X</fullName>
                </value>
                <value>
                    <fullName>Individual 2X</fullName>
                </value>
                <value>
                    <fullName>Individual 3X</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Deductible_Calculation_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Family Deductible Calculation Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Deductible_Calculation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Family Deductible Calculation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family_Deductible_Calculation_comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Family Deductible Calculation comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family_OOP_Calculation_comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Family OOP Calculation comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family_OPP_Calculation__c</fullName>
        <label>Family Out-of-Pocket Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate 2x</fullName>
                </value>
                <value>
                    <fullName>Aggregate 3x</fullName>
                </value>
                <value>
                    <fullName>Individual 2X</fullName>
                </value>
                <value>
                    <fullName>Individual 3X</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>